--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
+  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/gabr1el1/Battleship/issues"
   },
